# yt-dlp-YTNSigDeno

./: Changelog.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: release.yaml  tests.yaml
yt_dlp_plugins/extractor/: yt_nsig_deno.py
